update CAS